Full closed loop

--- a/report/report_draft.ipynb
+++ b/report/report_draft.ipynb
@@ -193,9 +193,17 @@
    "source": [
     "## References\n",
     "\n",
-    "[Gramacy2016] \n",
+    "[Gramacy2016] https://arxiv.org/abs/1403.4890\n",
+    "\n",
     "[Ariafar2019] http://jmlr.org/papers/volume20/18-227/18-227.pdf\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
