2d feasibilty plots and fixes

--- a/report/report_draft.ipynb
+++ b/report/report_draft.ipynb
@@ -11,9 +11,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
+    "## References\n",
+    "\n",
+    "[**Gramacy2016**]  Robert B. Gramacy, Genetha A. Gray, Sébastien Le Digabel, Herbert K. H. Lee, Pritam Ranjan, Garth Wells & Stefan M. Wild (2016) Modeling an Augmented Lagrangian for Blackbox Constrained Optimization, Technometrics, 58:1, 1-11, DOI: 10.1080/00401706.2015.1014065 \n",
+    "ArXiv: https://arxiv.org/abs/1403.4890, Semantic Scholar: https://www.semanticscholar.org/paper/Modeling-an-augmented-Lagrangian-for-improved-Digabel-Gramacy/\n",
+    "\n",
+    "[**HernndezLobato2015**] \n",
+    "José Miguel Hernández-Lobato, Michael A. Gelbart,Ryan P. Adams, Matthew W. Hoffman, and ZoubinGhahramani. A General Framework for Constrained Bayesian Optimization using Information-based Search.Journal of Machine Learning Research.arXiv:1511.09422 [stat.ML]\n",
+    "\n",
+    "[**Ariafar2019**] \n",
+    "Journal of Machine Learning Research: http://jmlr.org/papers/volume20/18-227/18-227.pdf\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Abstract\n",
     "\n",
-    "We describe an algorithm for blackbox optimization with blackbox constraints based on a response surface modeling with gaussian processes and Augmented Lagrangian optimization framework. An approach based on this combination was original described by Gramacy et al 2016. Our principal modification to their approach is to move updates of lagrangian multipliers to the inner loop of the algorithm and to reinitialize and estimate multipliers from scratch after every blackbox evaluation. We use EI acquisition over Augmented Lagrangian to obtain the next proposal point for blackbox evaluation. This stratagy proves effective and we achieve state of the art results in terms of number of blackbox evaluations on sythetic benchmarks and real world problems. Our algorithm is implemented in BoTorch - a recent open source library for scalable Monte-Carlo based acquisiton functions."
+    "We describe an algorithm for blackbox optimization with blackbox constraints based on a response surface modeling with gaussian processes and Augmented Lagrangian optimization framework. An approach based on this combination was original described by Gramacy et al 2016. Our principal modification to their approach is to move updates of lagrangian multipliers to the inner loop of the algorithm. We reinitialize and estimate multipliers from scratch after every blackbox evaluation and than use EI acquisition over Augmented Lagrangian with estimated multipliers to obtain the next proposal point for blackbox evaluation. This stratagy proves effective and we achieve competitive results in terms of number of blackbox evaluations on sythetic benchmarks and real world problems. Our algorithm is implemented in BoTorch - a recent open source library for scalable Monte-Carlo based acquisiton functions."
    ]
   },
   {
@@ -185,17 +203,6 @@
    "source": [
     "## Experiment on the real-world problem\n",
     "TODO\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## References\n",
-    "\n",
-    "[Gramacy2016] https://arxiv.org/abs/1403.4890\n",
-    "\n",
-    "[Ariafar2019] http://jmlr.org/papers/volume20/18-227/18-227.pdf\n"
    ]
   },
   {
