add smooth variation of augemnted lagrangian

--- a/report/report_draft.ipynb
+++ b/report/report_draft.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "[**Ariafar2019**] \n",
     "Journal of Machine Learning Research: http://jmlr.org/papers/volume20/18-227/18-227.pdf\n",
-    "\n"
+    "Source code https://github.com/SetarehAr/ADMMBO\n"
    ]
   },
   {
