cleanup experiments, add more synthetic functions

--- a/report/report_draft.ipynb
+++ b/report/report_draft.ipynb
@@ -24,6 +24,8 @@
     "\n",
     "[**Bertsekas1982**]\n",
     "\n",
+    "[**Gardner2014**]\n",
+    "\n",
     "[**Gramacy2016**]  Robert B. Gramacy, Genetha A. Gray, Sébastien Le Digabel, Herbert K. H. Lee, Pritam Ranjan, Garth Wells & Stefan M. Wild (2016) Modeling an Augmented Lagrangian for Blackbox Constrained Optimization, Technometrics, 58:1, 1-11, DOI: 10.1080/00401706.2015.1014065 \n",
     "ArXiv: https://arxiv.org/abs/1403.4890, Semantic Scholar: https://www.semanticscholar.org/paper/Modeling-an-augmented-Lagrangian-for-improved-Digabel-Gramacy/\n",
     "\n",
