--- a/report/report_draft.ipynb
+++ b/report/report_draft.ipynb
@@ -14,17 +14,20 @@
     "\n",
     "## References\n",
     "\n",
-    "[**Ariafar2019**] \n",
+    "[**Ariafar2019**] Setareh Ariafar, Jaume Coll-Font, Dana H. Brooks, Jennifer G. Dy:\n",
+    "ADMMBO: Bayesian Optimization with Unknown Constraints using ADMM. J. Mach. Learn. Res. 20: 123:1-123:26 (2019)\n",
     "Journal of Machine Learning Research: http://jmlr.org/papers/volume20/18-227/18-227.pdf\n",
     "Source code https://github.com/SetarehAr/ADMMBO\n",
     "\n",
-    "[**Balandat2019**]\n",
+    "[**Balandat2019**] Maximilian Balandat, Brian Karrer, Daniel R. Jiang, Samuel Daulton, Benjamin Letham, Andrew Gordon Wilson, Eytan Bakshy:\n",
+    "BoTorch: Programmable Bayesian Optimization in PyTorch. CoRR abs/1910.06403 (2019)\n",
     "\n",
     "[**Bayraksan2015**] Guzin Bayraksan and David K. Love, Data-Driven Stochastic Programming Using Phi-Divergences, Tutorials in Operations Reseach \n",
     "\n",
     "[**Bertsekas1982**]\n",
     "\n",
-    "[**Gardner2014**]\n",
+    "[**Gardner2014**] Jacob R. Gardner, Matt J. Kusner, Zhixiang Eddie Xu, Kilian Q. Weinberger, John P. Cunningham:\n",
+    "Bayesian Optimization with Inequality Constraints. ICML 2014: 937-945\n",
     "\n",
     "[**Gramacy2016**]  Robert B. Gramacy, Genetha A. Gray, Sébastien Le Digabel, Herbert K. H. Lee, Pritam Ranjan, Garth Wells & Stefan M. Wild (2016) Modeling an Augmented Lagrangian for Blackbox Constrained Optimization, Technometrics, 58:1, 1-11, DOI: 10.1080/00401706.2015.1014065 \n",
     "ArXiv: https://arxiv.org/abs/1403.4890, Semantic Scholar: https://www.semanticscholar.org/paper/Modeling-an-augmented-Lagrangian-for-improved-Digabel-Gramacy/\n",
@@ -32,9 +35,11 @@
     "[**HernndezLobato2015**] \n",
     "José Miguel Hernández-Lobato, Michael A. Gelbart,Ryan P. Adams, Matthew W. Hoffman, and ZoubinGhahramani. A General Framework for Constrained Bayesian Optimization using Information-based Search.Journal of Machine Learning Research.arXiv:1511.09422 [stat.ML]\n",
     "\n",
-    "[**Iusem1999**]\n",
+    "[**Iusem1999**] \n",
+    "Iusem, A.N.: Augmented Lagrangian Methods and Proximal Point Methods for Convex Optimization. ((1999\n",
     "\n",
-    "[**Jones1998**]\n",
+    "[**Jones1998**] Donald R. Jones, Matthias Schonlau, William J. Welch:\n",
+    "Efficient Global Optimization of Expensive Black-Box Functions. J. Glob. Optim. 13(4): 455-492 (1998)\n",
     "\n",
     "[**Letham2019**] Benjamin Letham, Brian Karrer, Guilherme Ottoni, and Eytan Bakshy, Constrained Bayesian Optimization with Noisy Experiments, Bayesian Analysis 14 (2019), p. 495\n",
     "\n",
@@ -42,21 +47,25 @@
     "\n",
     "[**Milgrom2002**]\n",
     "\n",
-    "[**Picheny2016**]\n",
+    "[**Picheny2016**] Victor Picheny, Robert B. Gramacy, Stefan M. Wild, Sébastien Le Digabel:\n",
+    "Bayesian optimization under mixed constraints with a slack-variable augmented Lagrangian. NIPS 2016: 1435-1443\n",
     "\n",
-    "[**Parikh????**]\n",
+    "[**Parikh2014**] Neal Parikh, Stephen P. Boyd:\n",
+    "Proximal Algorithms. Found. Trends Optim. 1(3): 127-239 (2014)\n",
     "\n",
     "[**Rockafellar1970**]\n",
     "\n",
     "[**Rockafellar1973**]\n",
     "\n",
-    "[**Shahriary2016**] Bobak Shahriari, Kevin Swersky, Ziyu Wang, Ryan P. Adams, and Nando de Freitas, Taking the Human Out of the Loop: A Review of Bayesian Optimization, Proceedings of the IEEE, Vol. 104, No. 1, January 2016\n",
+    "[**Shahriary2016**] Bobak Shahriari, Kevin Swersky, Ziyu Wang, Ryan P. Adams, Nando de Freitas:\n",
+    "Taking the Human Out of the Loop: A Review of Bayesian Optimization. Proc. IEEE 104(1): 148-175 (2016)\n",
     "\n",
     "[**Schonlau1998**]\n",
     "\n",
     "[**Sorokina2015**] Sorokina, A.N., Chervonenkis, A.Y. An improved optimization algorithm of ads’ allocation in sponsored search and the results of experiments. Autom Remote Control 76, 1315–1325 (2015). https://doi.org/10.1134/S0005117915070164\n",
     "\n",
-    "[**Wilson????**] Reparametrization trick for acquisition functions"
+    "[**Wilson2017**] James T. Wilson, Riccardo Moriconi, Frank Hutter, Marc Peter Deisenroth:\n",
+    "The reparameterization trick for acquisition functions. CoRR abs/1712.00424 (2017)\n"
    ]
   },
   {
@@ -303,9 +312,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:albo] *",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-albo-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -317,7 +326,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
